welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit = true)
                ^